--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<form>
+	<form id="form">
 		<input type="search" name="search_bar" placeholder="Search" id="search">
-		<button>Submit</button>
+		<button id="button">Submit</button>
 	</form>
 	<div class="container">
 	</div>
